@@ -117,6 +117,7 @@ def build(bld):
         'model/arp-header.cc',
         'model/arp-cache.cc',
         'model/arp-l3-protocol.cc',
+        'model/arp-queue-disc-item.cc',
         'model/udp-socket-impl.cc',
         'model/ipv4-end-point-demux.cc',
         'model/udp-socket-factory-impl.cc',
@@ -325,6 +326,7 @@ def build(bld):
         'model/ip-l4-protocol.h',
         'model/arp-header.h',
         'model/arp-cache.h',
+        'model/arp-queue-disc-item.h',
         'model/icmpv6-l4-protocol.h',
         'model/ipv6-interface.h',
         'model/ndisc-cache.h',
